Fix css bug on collapse

--- a/templates/frontOffice/default/assets/src/less/theme/panels.less
+++ b/templates/frontOffice/default/assets/src/less/theme/panels.less
@@ -20,7 +20,7 @@
                 text-decoration: none;
 
                 &.collapsed {
-                    background: inherit;
+                    background: none;
                     color: inherit;
 
                     &:hover,
